--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,7 @@
     --bg-gray: #dad6d6; 
     --color-primary: #4D41C0;
     --white: #fff;
+    --text-gray: #4a4a4a;
 
 }
 * {
@@ -49,13 +50,54 @@ a, a:hover {
     text-decoration: none;
     color: unset;
 }
- .DsMovie-contact-container{
+ .DsMovie-contact-container {
      display: flex;
      align-items: center;
  }
 
- .DsMovie-contact-container img{
+ .DsMovie-contact-container img {
      margin-right: 10px ;
  }
 
+ #DsMovie-card-list{
+     padding: 40px 0;
+     
+ }
+
+ .DsMovie-card {
+        width: 360px;
+ }
+ 
+ .DsMovie-card img {
+        width: 100%;
+        border-radius: 8px 8px 0 0  ;
+ }
+
+ .DsMovie-card-description {
+        padding: 10px 0 20px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--white);
+        border-radius: 0 0 8px 8px;
+}
+
+.DsMovie-card-description h3 {
+        font-size: 14px;
+        font-weight: 700;
+        margin-bottom: 25px;
+}
+
+.DsMovie-btn, .DsMovie-btn:hover {
+        width: 180px;
+        height: 40px;
+        background-color: var(--color-primary);
+        color: var(--white);
+        font-size: 14px;
+        font-weight: 700;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4px;
+}
     
