--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -65,7 +65,7 @@ a, a:hover {
  }
 
  .DsMovie-card {
-        width: 360px;
+        width: 100%;
  }
  
  .DsMovie-card img {
@@ -74,18 +74,22 @@ a, a:hover {
  }
 
  .DsMovie-card-description {
-        padding: 10px 0 20px 0;
+        padding: 10px 20px 20px 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: space-between;
         background-color: var(--white);
         border-radius: 0 0 8px 8px;
+        min-height: 150px;
+
 }
 
 .DsMovie-card-description h3 {
         font-size: 14px;
         font-weight: 700;
         margin-bottom: 25px;
+        text-align: center;
 }
 
 .DsMovie-btn, .DsMovie-btn:hover {
