--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -105,3 +105,7 @@ a, a:hover {
         border-radius: 4px;
 }
     
+.DsMovie-form-container {
+        padding: 40px 0 ;
+        max-width: 480px;
+}
